--- a/res/l10n/qps-ploc.json
+++ b/res/l10n/qps-ploc.json
@@ -23,7 +23,7 @@
     "anastellos": {
         "info": {
             "about": {
-                "desc": "[!!! [ßôƭ δèƨçřïƥƭïôñ]\n\n> *Ûƨè `{prefix}λèℓƥ` ƭô ϱèƭ ƭλè ïñƒôř₥áƭïôñ áβôúƭ ₥ôƨƭ çô₥₥áñδƨ.* !!!]",
+                "desc": "[!!! [ßôƭ δèƨçřïƥƭïôñ]\n\n> *Ûƨè `{prefix}λèℓƥ` ƭô ϱèƭ ƭλè ïñƒô áβôúƭ ƭλè áƲáïℓáβℓè ₥ôδúℓèƨ áñδ çô₥₥áñδƨ.* !!!]",
                 "indev": "[!!! \n\nTλè βôƭ ïƨ řúññïñϱ ïñ ÐÉßÛG ₥ôδè áñδ ïƭƨ ƨƭáβℓè ôƥèřáƭïôñ ïƨ ñôƭ ϱúářáñƭèèřèδ. Ìƭ ïƨ řèçô₥₥èñδèδ ƭô řèƒřáïñ ƒřô₥ úƨïñϱ ƭλè βôƭ úñƭïℓ ƭλè ₥áïñƭáïñáñçè ïƨ ƒïñïƨλèδ. !!!]",
                 "anastellos": "[!!! Þôωèřèδ β¥ Âñáƨƭèℓℓôƨ Éñϱïñè !!!]",
                 "creator": "[!!! <> ωïƭλ ❤ β¥ {creator} !!!]"
@@ -176,6 +176,5 @@
                 "decline": "[!!! Ðèçℓïñè !!!]"
             }
         }
-    },
-    "cmds": {}
+    }
 }
