--- a/res/l10n/ru.json
+++ b/res/l10n/ru.json
@@ -26,7 +26,7 @@
     "anastellos": {
         "info": {
             "about": {
-                "desc": "[Описание бота]\n\n> *Чтобы получить информацию обо всех доступных командах - введите `{prefix}help`.*",
+                "desc": "[Описание бота]\n\n> *Чтобы получить информацию о доступных модулях и командах - введите `{prefix}help`.*",
                 "indev": "\n\nВ данный момент бот работает в режиме DEBUG, и его корректная работа не гарантирована. Рекомендуется воздержаться от использования до завершения технических работ.",
                 "anastellos": "Создано на базе Anastellos Engine",
                 "creator": "<> {creator} с ❤"
@@ -174,6 +174,5 @@
             "l10n_unsupported": "*Данная команда недоступна в текущей локализации.*"
         },
         "privacy": {}
-    },
-    "cmds": {}
+    }
 }
