feat!: huge l10n overhaul (WIP), small fixes

--- a/res/l10n/ru.json
+++ b/res/l10n/ru.json
@@ -24,142 +24,169 @@
         ]
     },
     "anastellos": {
-        "info": {
-            "about": {
-                "desc": "[Описание бота]\n\n> *Чтобы получить информацию о доступных модулях и командах - введите `{prefix}help`.*",
-                "indev": "\n\nВ данный момент бот работает в режиме DEBUG, и его корректная работа не гарантирована. Рекомендуется воздержаться от использования до завершения технических работ.",
-                "anastellos": "Создано на базе Anastellos Engine",
-                "creator": "<> {creator} с ❤"
-            },
-            "help": {
-                "title": "Доступные команды",
-                "active_cogs": "Активные модули",
-                "inactive_cogs": "Неактивные модули",
-                "internal_cogs": "Внутренние модули",
-                "desc": "*`[аргумент=X]` - необязательный аргумент (значение приравнивается к X).*\n*`<аргумент>` - требует прямого ввода аргумента.*",
-                "desc_groups": "*Используйте `{prefix}help <имя группы>`, чтобы увидеть её подкоманды.*",
-                "usage": "**Использование команды:**",
-                "description": "**Описание:**",
-                "extra": "**Дополнительно:**",
+        "help": {
+            "title": "Доступные команды",
+            "active_cogs": "Активные модули",
+            "inactive_cogs": "Неактивные модули",
+            "internal_cogs": "Внутренние модули",
+            "desc": "*`[аргумент=X]` - необязательный аргумент (значение приравнивается к X).*\n*`<аргумент>` - требует прямого ввода аргумента.*",
+            "desc_groups": "*Используйте `{prefix}help <имя группы>`, чтобы увидеть её подкоманды.*",
+            "usage": "**Использование команды:**",
+            "description": "**Описание:**",
+            "extra": "**Дополнительно:**",
+            "commands": {
+                "help": {
+                    "desc": "Вывести данное сообщение."
+                },
+                "settings": {
+                    "desc": "Показать текущую конфигурацию бота на сервере. Эту команду и все её подкоманды могут выполнять только администраторы."
+                },
+                "leave": {
+                }
+            }
+        },
+        "cogs": {
+            "info": {
+                "help": {
+                    
+                },
                 "commands": {
-                    "help": {
-                        "desc": "Вывести данное сообщение."
-                    },
                     "about": {
-                        "desc": "Выводит сообщение с информацией о боте."
+                        "help": {
+                            "desc": "Выводит сообщение с информацией о боте."
+                        },
+                        "desc": "[Описание бота]\n\n> *Чтобы получить информацию о доступных модулях и командах - введите `{prefix}help`.*",
+                        "indev": "\n\nВ данный момент бот работает в режиме DEBUG, и его корректная работа не гарантирована. Рекомендуется воздержаться от использования до завершения технических работ.",
+                        "anastellos": "Создано на базе Anastellos Engine",
+                        "creator": "<> {creator} с ❤"
+                    }
+                }
+            },
+            "listeners": {
+                "help": {
+                    
+                }
+            },
+            "privacy": {
+                "help": {
+                    
+                }
+            },
+            "technical": {
+                "help": {
+
+                },
+                "commands": {
+                    "stop": {
+                        "msg": "*Останавливаю бота...*"
+                    },
+                    "reload": {
+                        "start": "*Начинаю реинициализацию модулей...*",
+                        "error": "*Произошла ошибка реинициализации после загрузки модуля {i}.*{traceback}",
+                        "success": "*Реинициализация успешно завершена.*"
+                    },
+                    "host_info": {
+                        "title": "Информация о хосте",
+                        "memory": "{used} из {total} ГБ ({used_percent}%)",
+                        "day": "день",
+                        "days": "дней",
+                        "os": "Операционная система",
+                        "mem": "Использование ОЗУ",
+                        "python_ver": "Версия интерпретатора Python",
+                        "nextcord_ver": "Версия библиотеки Nextcord",
+                        "bot_uptime": "Время работы бота",
+                        "bot_repo": "Сборка бота",
+                        "engine_repo": "Сборка движка",
+                        "branch": "Активная ветка",
+                        "commit_sha": "Хеш ревизии"
                     },
                     "ping": {
-                        "desc": "Вывести сообщение с временем задержки между ботом и сервером."
-                    },
-                    "settings": {
-                        "desc": "Показать текущую конфигурацию бота на сервере. Эту команду и все её подкоманды могут выполнять только администраторы."
-                    },
-                    "prefix": {
+                        "help": {
+                            "desc": "Вывести сообщение с временем задержки между ботом и сервером."
+                        }
+                    }
+                }
+            },
+            "settings": {
+                "list": {
+                    "title": "Настройки сервера",
+                    "prefix": "Префикс",
+                    "lang": "Язык",
+                    "toggle_cog": "Активные/неактивные модули",
+                    "enabled": "**включено**",
+                    "disabled": "**выключено**",
+                    "multilevel": "*структурная опция*",
+                    "list": "*список*"
+                },
+                "prefix": {
+                    "help": {
                         "desc": "Поменять префикс бота на сервере. Пустой аргумент - сброс на `{def_prefix}`.",
                         "args": {
                             "new_prefix": "новый префикс"
-                        }
+                        }    
                     },
-                    "language": {
+                    "title": "Префикс успешно изменён",
+                    "desc": "Новый префикс для бота: `{new_prefix}`."
+                },
+                "language": {
+                    "help": {
                         "desc": "Поменять язык бота для этого сервера.",
                         "extra": "Доступные языки: `{lang_names}`.",
                         "args": {
                             "new_lang": "новый язык"
                         }
                     },
-                    "leave": {
+                    "title": "Язык бота успешно изменён",
+                    "desc": "Теперь бот будет отвечать на русском языке."
+                },
+                "leave": {
+                    "help": {
                         "desc": "Удалить бота из сервера с опциональной очисткой конфигурации. Эту команду могут выполнять только администраторы."
+                    },
+                    "title_msg": "{name} готов к выходу...",
+                    "desc_msg": "Вы уверены, что хотите удалить бота из сервера? Выберите один из вариантов ниже.\n\nВыйти - бот выйдет и удалит только свои вебхуки и отключит логи.\nВыйти и забыть - также полностью удалит все данные о сервере из баз данных бота.\nОтмена - оставить бота.",
+                    "ui": {
+                        "leave": {
+                            "label": "Выйти",
+                            "title": "{name} покинул сервер. До встречи!",
+                            "desc": "Мы надеемся, что вам понравился наш бот! В случае, если вы передумаете, мы оставили вашу конфигурацию, так что бот продолжит свою работу также, как и до выхода, когда вы решите вернуть нас назад."
+                        },
+                        "purge": {
+                            "label": "Выйти и забыть",
+                            "title": "{name} покинул и забыл сервер",
+                            "desc": "Мы надеемся, что вам понравился наш бот! Вспе данные о вашем сервере были удалены с наших серверов, так что вы можете не беспокоиться о своей конфиденциальности. В случае, если вы передумаете о нашем уходе, бота можно вернуть в строй, однако может потребоваться его повторная настройка."
+                        },
+                        "cancel": {
+                            "label": "Отмена",
+                            "title": "Выход отменён",
+                            "desc": "Бот остаётся на сервере. Мы вас не подведём."
+                        }
                     }
+                },
+                "resps": {
+                    "title": "Ответы на триггеры",
+                    "desc_on": "Теперь бот будет отвечать на сообщения-триггеры.",
+                    "desc_off": "Бот больше не будет отвечать на сообщения-триггеры."
+                },
+                "telemetry": {
+                    "title": "Канал-аудит",
+                    "desc_on": "Действия будут записываться в {channel}.",
+                    "desc_off": "Действия больше не будут записываться.",
+                    "error_desc": "Нет доступа к вебхукам. Пожалуйста, проверьте права бота."
+                },
+                "toggle_cog": {
+                    "title": "Статус модуля",
+                    "active": "активен",
+                    "inactive": "неактивен",
+                    "nocog_error": "Модуля с таким именем не существует.",
+                    "intcog_error": "Этот модуль является внутренним и не может быть деактивирован.",
+                    "status_desc": "Модуль \"{cog_name}\" в данный момент имеет статус \"{status}\" на данном сервере.",
+                    "enable_desc": "Модуль \"{cog_name}\" была активирован.",
+                    "disable_desc": "Модуль \"{cog_name}\" была деактивирован."
                 }
             }
         },
-        "technical": {
-            "stop": "*Останавливаю бота...*",
-            "reload": {
-                "start": "*Начинаю реинициализацию модулей...*",
-                "error": "*Произошла ошибка реинициализации после загрузки модуля {i}.*{traceback}",
-                "success": "*Реинициализация успешно завершена.*"
-            },
-            "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме DEBUG. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**",
-            "host_info": {
-                "title": "Информация о хосте",
-                "memory": "{used} из {total} ГБ ({used_percent}%)",
-                "day": "день",
-                "days": "дней",
-                "os": "Операционная система",
-                "mem": "Использование ОЗУ",
-                "python_ver": "Версия интерпретатора Python",
-                "nextcord_ver": "Версия библиотеки Nextcord",
-                "bot_uptime": "Время работы бота",
-                "bot_repo": "Сборка бота",
-                "engine_repo": "Сборка движка",
-                "branch": "Активная ветка",
-                "commit_sha": "Хеш ревизии"
-            }
-        },
-        "settings": {
-            "list": {
-                "title": "Настройки сервера",
-                "prefix": "Префикс",
-                "lang": "Язык",
-                "toggle_cog": "Активные/неактивные модули",
-                "enabled": "**включено**",
-                "disabled": "**выключено**",
-                "multilevel": "*структурная опция*",
-                "list": "*список*"
-            },
-            "prefix": {
-                "title": "Префикс успешно изменён",
-                "desc": "Новый префикс для бота: `{new_prefix}`."
-            },
-            "lang": {
-                "title": "Язык бота успешно изменён",
-                "desc": "Теперь бот будет отвечать на русском языке."
-            },
-            "leave": {
-                "title_msg": "{name} готов к выходу...",
-                "desc_msg": "Вы уверены, что хотите удалить бота из сервера? Выберите один из вариантов ниже.\n\nВыйти - бот выйдет и удалит только свои вебхуки и отключит логи.\nВыйти и забыть - также полностью удалит все данные о сервере из баз данных бота.\nОтмена - оставить бота.",
-                "ui": {
-                    "leave": {
-                        "label": "Выйти",
-                        "title": "{name} покинул сервер. До встречи!",
-                        "desc": "Мы надеемся, что вам понравился наш бот! В случае, если вы передумаете, мы оставили вашу конфигурацию, так что бот продолжит свою работу также, как и до выхода, когда вы решите вернуть нас назад."
-                    },
-                    "purge": {
-                        "label": "Выйти и забыть",
-                        "title": "{name} покинул и забыл сервер",
-                        "desc": "Мы надеемся, что вам понравился наш бот! Вспе данные о вашем сервере были удалены с наших серверов, так что вы можете не беспокоиться о своей конфиденциальности. В случае, если вы передумаете о нашем уходе, бота можно вернуть в строй, однако может потребоваться его повторная настройка."
-                    },
-                    "cancel": {
-                        "label": "Отмена",
-                        "title": "Выход отменён",
-                        "desc": "Бот остаётся на сервере. Мы вас не подведём."
-                    }
-                }
-            },
-            "resps": {
-                "title": "Ответы на триггеры",
-                "desc_on": "Теперь бот будет отвечать на сообщения-триггеры.",
-                "desc_off": "Бот больше не будет отвечать на сообщения-триггеры."
-            },
-            "telemetry": {
-                "title": "Канал-аудит",
-                "desc_on": "Действия будут записываться в {channel}.",
-                "desc_off": "Действия больше не будут записываться.",
-                "error_desc": "Нет доступа к вебхукам. Пожалуйста, проверьте права бота."
-            },
-            "toggle_cog": {
-                "title": "Статус модуля",
-                "active": "активен",
-                "inactive": "неактивен",
-                "nocog_error": "Модуля с таким именем не существует.",
-                "intcog_error": "Этот модуль является внутренним и не может быть деактивирован.",
-                "status_desc": "Модуль \"{cog_name}\" в данный момент имеет статус \"{status}\" на данном сервере.",
-                "enable_desc": "Модуль \"{cog_name}\" была активирован.",
-                "disable_desc": "Модуль \"{cog_name}\" была деактивирован."
-            }
-        },
-        "global_errors": {
+        "errors": {
             "max_concurrency": "*Команда уже находится в процессе выполнения максимальное количество раз.*",
             "channel_not_found": "*Указанный канал не найден на этом сервере.*",
             "bad_argument": "*Указаны некорректные аргументы команды.*",
